--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/webapp/dhis-web-maintenance-dataadmin/viewScheduledTasks.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/webapp/dhis-web-maintenance-dataadmin/viewScheduledTasks.vm
@@ -20,6 +20,7 @@
     <h3>$i18n.getString( "scheduling_management" ) #openHelp( "scheduling" )</h3>
 
 <input id="isRunning" type="hidden" value="${running}">
+<input id="isSyncInProgress" type="hidden" value="${syncInProgress}">
 
 <form id="schedulingForm" action="scheduleTasks.action" method="post">
 
