#1738 [Kaustav/Srikanth] Fixed lastUpdatedBy user is not syncing

--- a/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/responseDataValues.vm
+++ b/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/responseDataValues.vm
@@ -35,5 +35,5 @@
   "complete":${complete},
   "date":"$!format.formatDate( $date )",
   "storedBy":"$!encoder.jsonEncode( ${storedBy} )",
-  "lastUpdatedBy":"${lastUpdatedBy}"
+  "lastUpdatedBy":"$!encoder.jsonEncode( ${lastUpdatedBy} )"
 }
